[build-system]
requires = [
	"aiofiles == 0.7.0",
	"authlib == 0.15.3",
	"fastapi == 0.65.1",
	"httpx == 0.18.1",
	"itsdangerous == 2.0.1",
	"jinja2 == 3.0.1",
	"python-multipart == 0.0.6",
	"requests == 2.25.1",
	"setuptools >= 40.6.0",
	"uvicorn[standard]",
	"wheel"]
build-backend = "setuptools.build_meta"
