[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "budgery"
authors = [
	{name = "Eli Ribble", email = "eli@theribbles.org"},
]
description = "A zero-based budgeting system"
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = [
	"aiofiles == 0.7.0",
	"alembic == 1.7.7",
	"authlib == 0.15.3",
	"fastapi == 0.65.1",
	"httpx == 0.18.1",
	"itsdangerous == 2.1.2",
	"jinja2 == 3.0.1",
	"openpyxl == 3.1.1",
	"python-magic == 0.4.27",
	"python-multipart == 0.0.5",
	"requests == 2.28.2",
	"SQLAlchemy == 1.4.36",
	"uvicorn[standard]",
	"wheel"
]
