[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "budgery"
authors = [
	{name = "Eli Ribble", email = "eli@theribbles.org"},
]
description = "A zero-based budgeting system"
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = [
	"aiofiles == 23.2.1",
	"alembic == 1.13.0",
	"authlib == 1.2.1",
	"fastapi == 0.104.1",
	"httpx == 0.25.2",
	"itsdangerous == 2.1.2",
	"jinja2 == 3.1.2",
	"openpyxl == 3.1.2",
	"python-magic == 0.4.27",
	"python-multipart == 0.0.6",
	"requests == 2.31.0",
	"SQLAlchemy == 2.0.23",
	"uvicorn[standard]",
	"wheel"
]
