[metadata]
author = Eli Ribble
author_email = eliribble@gmail.com
description = A zero-based budgeting system
long_description = file: README.md
long_description_content_type = text/markdown
name = budgery
version = 0.1

[options]
install_requires =
	asyncpg
	quart
packages = find:
python_requires = >=3.7
